@@ -8,6 +8,8 @@ class PDF::Font::Loader::Enc::CMap
     also does PDF::Font::Loader::Enc::Glyphic;
 
     has uint32 @.to-unicode;
+    has UInt %!from-unicode;
+    has Str $.enc;
 
     sub valid-codepoint($_) {
         # not an exhuastive check
@@ -22,6 +24,7 @@ class PDF::Font::Loader::Enc::CMap
                     my uint ($from, $to, $codepoint) = @<r>.map: { :16(.Str) };
                     for $from .. $to {
                         if valid-codepoint($codepoint) {
+                            %!from-unicode{$codepoint} = $_;
                             @!to-unicode[$_] = $codepoint++;
                         }
                         else {
@@ -35,6 +38,7 @@ class PDF::Font::Loader::Enc::CMap
                 if /:s [ '<' $<r>=[<xdigit>+] '>' ] ** 2 / {
                     my uint ($from, $codepoint) = @<r>.map: { :16(.Str) };
                     if valid-codepoint($codepoint) {
+                        %!from-unicode{$codepoint} = $from;
                         @!to-unicode[$from] = $codepoint;
                     }
                     else {
@@ -48,6 +52,7 @@ class PDF::Font::Loader::Enc::CMap
     method set-encoding($chr-code, $idx) {
         unless @!to-unicode[$idx] ~~ $chr-code {
             @!to-unicode[$idx] = $chr-code;
+            %!from-unicode{$chr-code} = $idx;
             $.add-glyph-diff($idx);
         }
     }
@@ -58,4 +63,16 @@ class PDF::Font::Loader::Enc::CMap
         buf32.new: $s.ords.map({@!to-unicode[$_]}).grep: {$_};
     }
 
+    multi method encode(Str $text, :$str! --> Str) {
+        self.encode($text).decode: 'latin-1';
+    }
+    multi method encode(Str $text where $!enc ~~ 'identity-h') {
+        # 16 bit Identity-H encoding
+        my uint16 @ = $text.ords.map({ %!from-unicode{$_} }).grep: {$_};
+    }
+    multi method encode(Str $text where $!enc ~~ 'identity' --> buf8) {
+        # 8 bit Identity encoding
+        buf8.new: $text.ords.map({ %!from-unicode{$_} }).grep: {$_};
+    }
+    multi method encode($) { fail "unsupported CMAP encoding: $!enc"  }
 }
