@@ -1,6 +1,8 @@
 Release 0.2.7
-   - [PDF::Font::Loader::Enc::CMap] Skip obviously invalid Unicode
-   code-points.
+   - [PDF::Font::Loader::Enc::CMap]
+     -- Skip obviously invalid Unicode code-points.
+     -- Added .encode() method. Initial support for /Identity-H
+        and /Identity schemes
 
 Release 0.2.6
    - [PDF::Font::Loader::FreeType]
